style.scss
---
---

//
// IMPORTS
//

//@import "reset";
//@import "variables";
// Syntax highlighting @import is at the bottom of this file

/**************/
/* BASE RULES */
/**************/
a {
  color: #1772d0;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

a:focus,
a:hover {
  color: #f09228;
  text-decoration: none;
}

body,
td,
th,
tr,
p,
a {
  font-family: 'Lato', Verdana, Helvetica, sans-serif;
  font-size: 15px;
  line-height: 1.6;
  font-display: auto;
}

strong {
  font-family: 'Lato', Verdana, Helvetica, sans-serif;
  font-size: 15px;
  font-weight: 700;
  font-display: auto;
}

h1 {
  font-family: 'Lato', Verdana, Helvetica, sans-serif;
  font-size: 28px;
  font-weight: 700;
  font-display: auto;
  text-align: center;
  padding: 0px;
  margin-block-start: 14px;
  margin-block-end: 14px;
  margin-left: 0px;
  margin-right: 0px;
}

h2 {
  font-family: 'Lato', Verdana, Helvetica, sans-serif;
  font-size: 22px;
  font-weight: 700;
  font-display: auto;
  padding: 0px;
  margin: 0px;
  display:inline; 
}

h3 {
  font-family: 'Lato', Verdana, Helvetica, sans-serif;
  font-size: 16px;
  font-weight: 700;
  font-display: auto;
  padding: 0px;
  margin: 0px;
  display:inline; 
}

hr {
  border: 0;
  height: 1px;
  background: #eee;
  margin: 1.5em 0;
}

blockquote {
  border-left: 4px solid #eee;
  padding-left: 1em;
  color: #666;
  font-style: italic;
  margin-left: 0;
}

::-moz-selection { background: #e2ecf5; }
::selection { background: #e2ecf5; }

.one {
  width: 160px;
  height: 160px;
  position: relative;
}

.two {
  width: 160px;
  height: 160px;
  position: absolute;
  transition: opacity .2s ease-in-out;
  -moz-transition: opacity .2s ease-in-out;
  -webkit-transition: opacity .2s ease-in-out;
}

.fade {
  transition: opacity .2s ease-in-out;
  -moz-transition: opacity .2s ease-in-out;
  -webkit-transition: opacity .2s ease-in-out;
}

.name {
  padding-top: 20px;
  margin: 0;
  font-family: 'Lato', Verdana, Helvetica, sans-serif;
  font-size: 32px;
  text-align: center;
}

.papertitle {
  font-family: 'Lato', Verdana, Helvetica, sans-serif;
  font-size: 15px;
  font-weight: 700;
}

span.highlight {
  background-color: #ffffd0;
}

.post-content {
  max-width: 100%;
}

.post-content code {
  background: #f4f4f4;
  padding: 0.1em 0.3em;
  border-radius: 3px;
  font-family: 'Bitstream Vera Sans Mono', 'Courier', monospace;
  font-size: 0.9em;
}

/* Mobile basic responsive fix */
@media screen and (max-width: 768px) {
  table td {
    display: block;
    width: 100% !important;
    max-width: 100% !important;
    box-sizing: border-box;
  }
  .profile-row {
    display: flex;
    flex-direction: column-reverse;
  }
  .profile-pic-td {
    text-align: center;
    margin-bottom: 10px;
  }
  .profile-pic {
    max-width: 180px !important;
    margin: 0 auto;
  }
  td img {
    margin: 0 auto;
    display: block;
  }
  .papertitle, p, h2, h3 {
    /* inline styles will override this where needed */
    text-align: left;
  }
  h2, h3 {
    display: block;
    margin-top: 10px;
    margin-bottom: 10px;
  }
  .name {
    padding-top: 0;
  }
}

// Settled on moving the import of syntax highlighting to the bottom of the CSS
// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
@import "highlights";
//@import "svg-icons";

